// Original file: proto/reservation.proto


export interface CreateReservationRequest {
  'reservationId'?: (string);
  'customerId'?: (string);
  'plumberId'?: (string);
  'repairType'?: (string);
  'description'?: (string);
  'status'?: (string);
  'date'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}

export interface CreateReservationRequest__Output {
  'reservationId'?: (string);
  'customerId'?: (string);
  'plumberId'?: (string);
  'repairType'?: (string);
  'description'?: (string);
  'status'?: (string);
  'date'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}
