// Original file: proto/reservation.proto


export interface ReservationResponse {
  'reservationId'?: (string);
  'customerId'?: (string);
  'plumberId'?: (string);
  'repairType'?: (string);
  'description'?: (string);
  'status'?: (string);
  'date'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}

export interface ReservationResponse__Output {
  'reservationId'?: (string);
  'customerId'?: (string);
  'plumberId'?: (string);
  'repairType'?: (string);
  'description'?: (string);
  'status'?: (string);
  'date'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}
