// Original file: proto/reservation.proto

import type { ReservationResponse as _reservationPackage_ReservationResponse, ReservationResponse__Output as _reservationPackage_ReservationResponse__Output } from '../reservationPackage/ReservationResponse';

export interface ReservationsResponse {
  'reservations'?: (_reservationPackage_ReservationResponse)[];
}

export interface ReservationsResponse__Output {
  'reservations'?: (_reservationPackage_ReservationResponse__Output)[];
}
