// Original file: proto/reservation.proto


export interface UpdateReservationRequest {
  'reservationId'?: (string);
  'repairType'?: (string);
  'description'?: (string);
  'status'?: (string);
}

export interface UpdateReservationRequest__Output {
  'reservationId'?: (string);
  'repairType'?: (string);
  'description'?: (string);
  'status'?: (string);
}
